--- a/Analysis/Embedded-SimpleRNN.ipynb
+++ b/Analysis/Embedded-SimpleRNN.ipynb
@@ -18,8 +18,17 @@
         "from keras import layers\n",
         "from keras.utils import pad_sequences\n",
         "train = pd.read_csv('/trainining_dataset.csv')\n",
-        "train=train.astype(str)\n",
         "test = pd.read_csv('/testing_dataset.csv')\n",
+        "#Importing necessary packages and files"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train=train.astype(str)\n",
         "test=test.astype(str)\n",
         "train_labels = train['Sentiment'].values\n",
         "train_labels = ks.utils.to_categorical(train_labels,3,dtype=\"float32\")\n",
@@ -38,6 +47,15 @@
         "sequences = tokenizer.texts_to_sequences(test['tidy_tweet'])\n",
         "test_tweets = ks.utils.pad_sequences(sequences, maxlen=max_len)\n",
         "X_train,X_test,y_train,y_test=train_test_split(train_tweets,train_labels, test_size=0.2)\n",
+        "#Tokenizing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "def modelbuild():\n",
         "  model = ks.models.Sequential()\n",
         "  model.add(layers.Embedding(max_words,20))\n",
@@ -47,6 +65,15 @@
         "  model.add(layers.Dense(3, activation='softmax'))\n",
         "  model.compile(optimizer='Adam',loss=\"categorical_crossentropy\",metrics=[\"accuracy\"],)\n",
         "  return model\n",
+        "#Neural Network Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "print(\"New Model y/n?\")\n",
         "c=input()\n",
         "if c == 'y':\n",
@@ -55,7 +82,15 @@
         "  model=ks.models.load_model('/models')\n",
         "history = model.fit(X_train, y_train, epochs=1,validation_data=(X_test, y_test))\n",
         "test_loss, test_acc = model.evaluate(X_test, y_test, verbose=2)\n",
-        "print('Model accuracy on validation data: ',test_acc)\n",
+        "print('Model accuracy on validation data: ',test_acc)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "test_loss, test_acc = model.evaluate(test_tweets,test_labels, verbose=1)\n",
         "print('Model accuracy on testing data: ',test_acc)\n",
         "print(\"Want to save model?\")\n",
