--- a/Data Cleaning/TwitterSentimentAnalysis__dataconversion.ipynb
+++ b/Data Cleaning/TwitterSentimentAnalysis__dataconversion.ipynb
@@ -18,7 +18,15 @@
         "#package import\n",
         "train=pd.read_csv('/content/Data/twitter_training.csv',names=[\"Tweet_ID\", \"Entity\",\"Sentiment\", \"Tweet_Content\"])\n",
         "test=pd.read_csv('/content/Data/twitter_validation.csv',names=[\"Tweet_ID\", \"Entity\", \"Sentiment\", \"Tweet_Content\"])\n",
-        "#data import\n",
+        "#data import"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "#refining the data\n",
         "train=train.dropna()\n",
         "#function to clean data\n",
@@ -40,10 +48,18 @@
         "  tokenized_tweet.head()\n",
         "  #lemmatizing\n",
         "  for i in range(len(tokenized_tweet)):\n",
-        "      tokenized_tweet[i] = ' '.join(tokenized_tweet[i])\n",
+        "    tokenized_tweet[i] = ' '.join(tokenized_tweet[i])\n",
         "  alltweets['tidy_tweet'] = tokenized_tweet\n",
         "  alltweets.head()\n",
-        "  return alltweets\n",
+        "  return alltweets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "def remove_unwanted(txt,pattern):\n",
         "    matches = re.findall(pattern,txt)\n",
         "    for match in matches:\n",
@@ -62,13 +78,29 @@
         "    if labels[i] == 'Irrelevant':\n",
         "      y.append(-1)\n",
         "  y = np.array(y)\n",
-        "  return y\n",
+        "  return y"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "train_data=cleannuptext(train)\n",
         "test_data=cleannuptext(test)\n",
         "train_data.drop(labels=['Tweet_Content','Tweet_ID','Entity'],axis=1,inplace=True)\n",
         "test_data.drop(labels=['Tweet_ID','Entity','Tweet_Content'],axis=1,inplace=True)\n",
         "train_data['Sentiment']=toknizetwt(train_data)\n",
-        "test_data['Sentiment']=toknizetwt(test_data)\n",
+        "test_data['Sentiment']=toknizetwt(test_data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "#final test and train dataset\n",
         "train_data.to_csv('training_dataset.csv', index=False)\n",
         "test_data.to_csv('testing_dataset.csv', index=False)"
