--- a/Data Cleaning/TwitterSentimentAnalysis__dataconversion.ipynb
+++ b/Data Cleaning/TwitterSentimentAnalysis__dataconversion.ipynb
@@ -22,6 +22,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Imported Training and Testing Dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -89,6 +97,8 @@
       "source": [
         "train_data=cleannuptext(train)\n",
         "test_data=cleannuptext(test)\n",
+        "#Calling function to clean data\n",
+        "\n",
         "train_data.drop(labels=['Tweet_Content','Tweet_ID','Entity'],axis=1,inplace=True)\n",
         "test_data.drop(labels=['Tweet_ID','Entity','Tweet_Content'],axis=1,inplace=True)\n",
         "train_data['Sentiment']=toknizetwt(train_data)\n",
